druid/deploy/druid-peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: druid
  namespace: druid
spec:
  mtls:
    mode: STRICT
