druid/deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: druid-operator
  namespace: druid
spec:
  replicas: 1
  selector:
    matchLabels:
      name: druid-operator
  template:
    metadata:
      labels:
        name: druid-operator
    spec:
      serviceAccountName: druid-operator
      containers:
        - name: druid-operator
          # Replace this with the built image name
          #image: druid-operator:latest
          image: druidio/druid-operator
          command:
          - /manager
          imagePullPolicy: Always
