druid/deploy/druid-virtualservice-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: druid
  namespace: druid
spec:
  hosts:
  - "druid.infologistix-cnc.ddnss.org"
  gateways:
  - istio-system/istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: druid-router.druid.svc.cluster.local
        port:
          number: 8888
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: druid
#  namespace: druid
#spec:
#  host: druid
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
